fixed images so they dont overflow the wrapper

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ em {
   text-shadow: 1px 1px 2px rgba(20,20,20,0.6);
 }
 
+img {
+  box-sizing: border-box;
+  max-width: 100%;
+}
 /*---header---*/
 .header-img {
   background-image: url(../images/grandcanyon1.jpg);
